@@ -1,9 +1,10 @@
 <div style="padding: 1em;">
-	<form method="post" action="/map/{$map->getURL()}/remove/{$wormhole->id}/">
+	<form action="Javascript: deleteWormhole()">
+		<input type="hidden" name="remove-wormhole-id" value="{$wormhole->id}">
+		<input type="hidden" name="remove-wormhole-confirmed" value="1">
 	{if $removeConnected}
-		<input type="hidden" name="connected" value="1">
+		<input type="hidden" name="remove-wormhole-connected" value="1">
 	{/if}
-		<input type="hidden" name="confirmed" value="1">
 		<h2>
 			<img src="/images/default/ui/map.png" align="left">
 			Delete {if $removeConnected}Connected{/if} System
@@ -23,7 +24,7 @@
 			{if $removeConnected}and it's connecting systems{/if}?
 		</div>
 		<div style="margin-top: 1em; text-align: right;">
-			<button type="submit">
+			<button type="submit" id="remove-wormhole-submit">
 				<img src="/images/default/apply.png" align="left">
 				YES
 			</button>
