@@ -8,6 +8,6 @@ foreach (\admin\model\AuthGroup::getAuthGroups() as $group)
     $subscription->amount = 0;
     $subscription->description = "Vippy 5 year anniversary!";
     $subscription->fromdate = "2017-05-01";
-    $subscription->tilldate = "2017-07-31";
+    $subscription->tilldate = "2017-08-31";
     $subscription->store();
 }
